Sample embed.properties file

--- a/embedgen/src/main/resources/as3-template.vm
+++ b/embedgen/src/main/resources/as3-template.vm
@@ -6,7 +6,7 @@ package ${pkg} {
 #else
 		[Embed(source="${item.Source}")]
 #end	
-		public static const ${item.name} : Class;
+		public static const ${item.Name} : Class;
 #end
 	}	
 }
