taking scale9 into account

--- a/embedgen/src/main/resources/as3-template.vm
+++ b/embedgen/src/main/resources/as3-template.vm
@@ -1,7 +1,7 @@
 package ${pkg} {
 	public class ${class} {
 #foreach( $item in $items )
-#if( $item.Left > 0 )
+#if( $scale9 && $item.Left > 0 )
 		[Embed(source="${item.Source}", scaleGridLeft=${item.Left}, scaleGridTop=${item.Top}, scaleGridRight=${item.Right}, scaleGridBottom=${item.Bottom})]
 #else
 		[Embed(source="${item.Source}")]
